Edit: deployed prod build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,8 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true
+    "skipLibCheck": true
+    // "noEmit": true,
+    // "allowImportingTsExtensions": true
   }
 }
