--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "npx tsc  && cp -r src/views dist/views && cp -r src/public dist/public",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
